fixed bug where notification header wasnt showing on small width screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ $very-dark-blue: hsl(224, 21%, 14%);
     padding: 0;
 
     body {
-        height: 100vh;
+        min-height: 100vh;
 
         display: flex;
         align-items: center;
